<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_name">BACTrackApp</string>
    <string name="action_settings">Settings</string>

    <string name="TEXT_DISCONNECTED">Disconnected</string>
    <string name="TEXT_CONNECTING">Connecting...</string>
    <string name="TEXT_DISCOVERING_SERVICES">Discovering services...</string>
    <string name="TEXT_CONNECTED">Connected!</string>

    <string name="TEXT_FIRMWARE_VERSION">Firmware version: </string>
    <string name="TEXT_SERIAL_NUMBER">Serial number: </string>
    <string name="TEXT_USE_COUNT">Use count: </string>
    <string name="TEXT_BATTERY_VOLTAGE">Battery voltage: </string>
    <string name="TEXT_BATTERY_LEVEL">Battery level: </string>

    <string name="TEXT_COUNTDOWN">Countdown: </string>
    <string name="TEXT_BLOW_NOW">Blow now!</string>
    <string name="TEXT_KEEP_BLOWING">Keep blowing...</string>
    <string name="TEXT_ANALYZING">Analyzing...</string>
    <string name="TEXT_FINISHED">Done! Result: </string>

    <string name="TEXT_ERR_NO_BREATHALYZERS_FOUND">Error: No breathalyzers found.</string>
    <string name="TEXT_ERR_BT_NOT_ENABLED">Error: Bluetooth is not enabled.</string>
    <string name="TEXT_ERR_BLE_NOT_SUPPORTED">Error: BLE is not supported on this device.</string>
    <string name="TEXT_ERR_BLOW_ERROR">Error: Blow process failed.</string>
    <string name="TEXT_ERR_LOCATIONS_NOT_ENABLED">Error: Location services are not enabled.</string>
    <string name="DONE">Done!</string>
    <string name="NO">No</string>
    <string name="MAYBE">Maybe</string>
    <string name="YES">Yes</string>
    <string name="WILL_YOU_DRINK">Are you going to drink tonight?</string>
    <string name="BACKGROUND_IMAGE">Background Image</string>
    <string name="START">Start</string>
    <string name="START_PROCESS_MESSAGE">Make sure to wait at least 20 minutes since your last drink for accurate results.</string>
    <string name="EMPTY_STRING" />
    <string name="WELCOME_MESSAGE">Welcome to\nBACtrack!</string>
    <string name="WELCOME_BODY">Let’s make sure we get you home safely every time.</string>
    <string name="OR">OR</string>
    <string name="LETS_GET_STARTED">LET’S GET STARTED</string>
    <string name="SKIP_FOR_LATER">Skip this for later</string>
    <string name="HOW_GOING_HOME">How are you getting home?</string>
    <string name="CAR">Car</string>
    <string name="WALK">Walk</string>
    <string name="FRIENDS">Friends</string>
    <string name="BUS">Bus</string>
    <string name="TAXI">Taxi</string>
    <string name="OTHER">Other</string>
    <string name="DEVICE_IMAGE">BACTrack Device</string>
    <string name="CHECK_BAC">Check BAC</string>
    <string name="MAIN_SCREEN_MESSAGE">Measure your BAC level when you’re ready to go home.</string>
    <string name="HAVE_FUN">Have a fun night and check back soon!</string>
    <string name="view_contacts">View Contacts</string>
    <string name="help">Help</string>
    <string name="add_contact">Add Contact</string>
    <string name="return_to_main">Return to Main</string>
    <string name="BAC_LEVEL">BAC_LEVEL</string>


    <string name="BAC_NOTIFICATION_CHANNEL">bac_notification_channel</string>
    <string name="title_activity_location">LocationActivity</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>

    <string name="request_updates">Request updates</string>
    <string name="remove_updates">Remove updates</string>
    <string name="unknown_location">Unknown location</string>
    <string name="batched_location_updates">Batched location updates</string>
    <string name="turn_on">Turn ON</string>
    <string name="turn_off">Turn OFF</string>
    <string name="contact_list_default_message">No Contacts</string>


    <plurals name="num_locations_reported">
        <item quantity="zero">No location reported</item>
        <item quantity="one">One location reported</item>
        <item quantity="other">%d locations reported</item>
    </plurals>

</resources>
