<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_background">

    <ImageView
        android:id="@+id/image_holiday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:alpha="0.4"
        android:contentDescription="@string/BACKGROUND_IMAGE"
        android:paddingBottom="150dp"
        android:paddingLeft="100dp"
        android:paddingRight="100dp"
        app:srcCompat="@mipmap/car" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/HOW_GOING_HOME"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button_car"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="58dp"
        android:layout_toStartOf="@+id/button_walk"
        android:background="@drawable/rounded_button_white_border"
        android:onClick="car_clicked"
        android:text="@string/CAR"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/button_walk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button_car"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_button_white_border"
        android:onClick="walk_clicked"
        android:text="@string/WALK"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/button_friends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button_walk"
        android:layout_marginStart="25dp"
        android:layout_toEndOf="@+id/button_walk"
        android:background="@drawable/rounded_button_white_border"
        android:onClick="friends_clicked"
        android:text="@string/FRIENDS"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/button_bus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button_car"
        android:layout_below="@+id/button_car"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_button_white_border"
        android:onClick="bus_clicked"
        android:text="@string/BUS"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/button_taxi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button_walk"
        android:layout_alignTop="@+id/button_bus"
        android:background="@drawable/rounded_button_white_border"
        android:onClick="taxi_clicked"
        android:text="@string/TAXI"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/button_other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button_friends"
        android:layout_alignTop="@+id/button_taxi"
        android:background="@drawable/rounded_button_white_border"
        android:onClick="other_clicked"
        android:text="@string/OTHER"
        android:textColor="@android:color/white" />

</RelativeLayout>