<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/six_imgs_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/main_screen_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/device_image"
        android:layout_alignParentStart="true"
        android:text="@string/MAIN_SCREEN_MESSAGE"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_medium" />

    <ImageView
        android:id="@+id/device_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/chk_bac_button"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="33dp"
        android:contentDescription="@string/DEVICE_IMAGE"
        app:srcCompat="@mipmap/device" />

    <Button
        android:id="@+id/chk_bac_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_button_white_border"
        android:onClick="checkBAC"
        android:text="@string/CHECK_BAC"
        android:textColor="@android:color/white" />
</RelativeLayout>