<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:fontFamily="monospace"
        android:lines="2"
        android:text="@string/WELCOME_MESSAGE"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="66dp"
        android:text="@string/WELCOME_BODY"
        android:textAlignment="center"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="109dp"
        android:text="@string/OR"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/get_started_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/skip_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="11dp"
        android:background="@drawable/rounded_button_white_border"
        android:onClick="get_started"
        android:padding="15dp"
        android:text="@string/LETS_GET_STARTED"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/skip_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:background="@android:color/transparent"
        android:onClick="skip_for_later"
        android:text="@string/SKIP_FOR_LATER"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <TextView android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_marginTop="12dp"
            android:textAlignment="viewEnd"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:text="Location Based Alert"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_medium"
            />

        <Button
            android:id="@+id/request_updates_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/skip_button"
            android:layout_centerHorizontal="true"
            android:layout_margin="11dp"
            android:onClick="requestLocationUpdates"
            android:padding="15dp"
            android:background="@drawable/rounded_button_white_border"
            android:layout_weight="1"
            android:text="Turn ON"
            android:textColor="@android:color/white"
            />



    </LinearLayout>

</RelativeLayout>